--- a/.github/workflows/ci-cd-university.yml
+++ b/.github/workflows/ci-cd-university.yml
@@ -11,11 +11,12 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: build and push docker image to registry
-      uses: docker/build-push-action@v5
+
+
+    - name: Build and Push
+      uses: docker/build-push-action@v6
       with:
-        context: ./Dockerfile
+        context: .
         push: true
         tags: ferreirafernandar/university-devops:latest
 
@@ -23,6 +24,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Build e Push no DockerHub Registry
+    - name: Run University DevOps
       run: |
         docker run ferreirafernandar/university-devops:latest        
