--- a/.github/workflows/ci-cd-university.yml
+++ b/.github/workflows/ci-cd-university.yml
@@ -12,7 +12,6 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-
     - name: Build and Push
       uses: docker/build-push-action@v6
       with:
@@ -21,6 +20,7 @@ jobs:
 
   cd:
     runs-on: ubuntu-latest
+    needs: [ci]
     steps:
     - uses: actions/checkout@v1
     - name: Run University DevOps
